Fix main overflow - #1

--- a/styles/style.css
+++ b/styles/style.css
@@ -166,9 +166,8 @@ body {
 .cards-container {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  gap: 20px;
   justify-items: center;
-  padding: 20px;
+  padding: 20px 10px;
 }
 
 /* TODO: blocks CSS */
@@ -244,7 +243,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  width: 326px;
+  width: 316px;
   height: 420px;
   padding: 20px;
   margin-bottom: 20px;
@@ -358,7 +357,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  width: 326px;
+  width: 316px;
   height: 420px;
   background-color: transparent;
   color: #131921;
@@ -407,7 +406,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  width: 326px;
+  width: 316px;
   height: 420px;
   padding: 20px;
   background-color: var(--main-background-color);
